--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-    <img src="./boat.png" class="boat" id="myId">
+    <img src="./images/boat.png" class="boat" id="myId">
+    <div class="fish" id="fish1"></div>
+    <div class="fish" id="fish2"></div>
     <div class="ocean">
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
     </div>
     <canvas></canvas>
+    <div class="test"><img src="./images/hook.png" class="hook"></div>
 
     <script src="./script.js"></script>
 </body>
