--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-    <img src="./images/boat.png" class="boat" id="myId">
-    <div class="fish" id="fish1"></div>
-    <div class="fish" id="fish2"></div>
+    
+    <div class="boat-container">
+        <img src="./images/boat.png" class="boat" id="myId">
+        <div class="rod-stand"></div>
+        <div class="rod"><img src="./images/hook.png" class="hook"></div>
+    </div>
     <div class="ocean">
         <div class="wave"></div>
         <div class="wave"></div>
         <div class="wave"></div>
     </div>
     <canvas></canvas>
-    <div class="test"><img src="./images/hook.png" class="hook"></div>
+    <div class="fishCont"></div>
 
     <script src="./script.js"></script>
 </body>
