--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <div class="boat-container">
         <img src="./images/boat.png" class="boat" id="myId">
+        <img src="./images/fisher2.png" class="fisher">
         <div class="rod-stand"></div>
         <div class="rod"><img src="./images/hook.png" class="hook"></div>
     </div>
