--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <div class="score-board">
-        <p>Score: <span id="score"></span></p>
-    </div>
+    <div class="score-board"></div>
     <div class="boat-container">
         <img src="./images/boat.png" class="boat" id="myId">
         <img src="./images/fisher2.png" class="fisher">
