--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="score-board"></div>
+    <div id="timer"></div>
     <div class="boat-container">
         <img src="./images/boat.png" class="boat" id="myId">
         <img src="./images/fisher2.png" class="fisher">
