--- a/index.html
+++ b/index.html
@@ -9,21 +9,35 @@
 </head>
 
 <body>
-    <div class="score-board"></div>
-    <div id="timer"></div>
-    <div class="boat-container">
-        <img src="./images/boat.png" class="boat" id="myId">
-        <img src="./images/fisher2.png" class="fisher">
-        <div class="rod-stand"></div>
-        <div class="rod"><img src="./images/hook.png" class="hook"></div>
+
+    <div id="start">
+        <p>Choose Your Avatar</p>
+        <img src="./images/fisher1.png" width="100px">
+        <img src="./images/fisher2.png" width="100px">
+        <button id="start-btn" onclick="initGame()">Start</button>
     </div>
-    <div class="ocean">
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
+
+    <div id="end" style="display: none;">
+        <button id="start-btn" onclick="restart()">Restart</button>
     </div>
-    <canvas></canvas>
-    <div class="fishCont"></div>
+    
+    <div id="game" style="display: none;">
+        <div class="score-board"></div>
+        <div id="timer"></div>
+        <div class="boat-container">
+            <img src="./images/boat.png" class="boat" id="myId">
+            <img src="./images/fisher2.png" class="fisher">
+            <div class="rod-stand"></div>
+            <div class="rod"><img src="./images/hook.png" class="hook"></div>
+        </div>
+        <div class="ocean">
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+        </div>
+        <canvas></canvas>
+        <div class="fishCont"></div>
+    </div>
 
     <script src="./script.js"></script>
 </body>
