--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Go Fishing</title>
+    <link rel="icon" href="./images/bubble.png">
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
 
     <div id="start">
-        <p>Choose Your Avatar</p>
+        <!-- <p>Choose Your Avatar</p>
         <img src="./images/fisher1.png" width="100px">
-        <img src="./images/fisher2.png" width="100px">
+        <img src="./images/fisher2.png" width="100px"> -->
         <button id="start-btn" onclick="initGame()">Start</button>
     </div>
 
