--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </div>
 
     <div id="end" style="display: none;">
-        <button id="start-btn" onclick="restart()">Restart</button>
+        <p>High Score: <span id="highScore">0</span></p>
+        <button id="restart-btn" onclick="restart()">Restart</button>
     </div>
     
     <div id="game" style="display: none;">
