multiplayer feature logic

--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
         <div class="score-board"></div>
         <div id="timer"></div>
         <div class="boat-container">
-            <img src="./images/boat.png" class="boat" id="myId">
-            <img src="./images/fisher2.png" class="fisher">
-            <div class="rod-stand"></div>
-            <div class="rod"><img src="./images/hook.png" class="hook"></div>
+
+            <img src="./images/boat.png" class="boat" id="boat1">
+            <img src="./images/fisher2.png" class="fisher" id="fisher1">
+            <div class="rod-stand" id="stand1"></div>
+            <div class="rod" id="rod1"><img src="./images/hook.png" class="hook" id="hook1"></div>
+
+            <img src="./images/boat.png" class="boat flip-horizontally" id="boat2">
+            <img src="./images/fisher2.png" class="fisher" id="fisher2">
+            <div class="rod-stand" id="stand2"></div>
+            <div class="rod" id="rod2"><img src="./images/hook.png" class="hook flip-horizontally" id="hook2"></div>
+
         </div>
         <div class="ocean">
             <div class="wave"></div>
