--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <img src="./images/fisher1.png" width="100px">
         <img src="./images/fisher2.png" width="100px"> -->
         <button id="start-btn" onclick="initGame()">Start</button>
+        <button id="multi-btn" onclick="initMultiGame()">Multiplayer</button>
     </div>
 
     <div id="end" style="display: none;">
@@ -33,10 +34,10 @@
             <div class="rod-stand" id="stand1"></div>
             <div class="rod" id="rod1"><img src="./images/hook.png" class="hook" id="hook1"></div>
 
-            <img src="./images/boat.png" class="boat flip-horizontally" id="boat2">
-            <img src="./images/fisher2.png" class="fisher" id="fisher2">
-            <div class="rod-stand" id="stand2"></div>
-            <div class="rod" id="rod2"><img src="./images/hook.png" class="hook flip-horizontally" id="hook2"></div>
+            <img src="./images/boat.png" class="boat flip-horizontally" id="boat2" style="display: none;">
+            <img src="./images/fisher2.png" class="fisher" id="fisher2" style="display: none;">
+            <div class="rod-stand" id="stand2" style="display: none;"></div>
+            <div class="rod" id="rod2" style="display: none;"><img src="./images/hook.png" class="hook flip-horizontally" id="hook2"></div>
 
         </div>
         <div class="ocean">
